mace-ebpf/include/mace.h

#ifndef MACE_EBPF_H
#define MACE_EBPF_H

#pragma once

/* THIS FILE IS AUTO-GENERATED BY cbindgen. DO NOT EDIT. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

// Fixed NUL-padded UTF-8 snapshot of `MemoryEvent::execve_cmdline` for C/Go/Python FFI (256 bytes).
#define RAW_EXECVE_CMDLINE_LEN 256

#define PROT_READ 1

#define PROT_WRITE 2

#define PROT_EXEC 4

#define MAP_ANONYMOUS 32

// Linux `PTRACE_ATTACH` (used for rule matching on ptrace events).
#define PTRACE_ATTACH 16

enum CSeverity {
    Info = 0,
    Warning = 1,
    Critical = 2,
};
typedef uint8_t CSeverity;

// Error codes returned by FFI functions.
// Negative values indicate errors, 0 indicates success.
enum MaceErrorCode {
    Success = 0,
    NullPointer = -1,
    ArenaFull = -2,
    ArenaEmpty = -3,
    Panic = -4,
    InitFailed = -5,
};
typedef int32_t MaceErrorCode;

typedef struct RawMemoryEvent {
    uint64_t timestamp_ns;
    uint32_t tgid;
    uint32_t pid;
    uint32_t syscall_id;
    uint32_t _pad0;
    uint64_t args[6];
    uint64_t cgroup_id;
    uint8_t comm[16];
    uint32_t uid;
    uint32_t _pad_uid;
    int64_t syscall_ret;
    uint8_t execve_cmdline[RAW_EXECVE_CMDLINE_LEN];
} RawMemoryEvent;

typedef struct CAlert {
    uint8_t rule_id[64];
    uint8_t rule_name[128];
    CSeverity severity;
    uint8_t _pad0[3];
    uint32_t tgid;
    uint32_t _pad1;
    uint64_t cgroup_id;
    uint64_t triggered_at_ns;
} CAlert;

// Opaque handle to an EventArena.
// C code receives this as a void* pointer.
// Must be freed with mace_arena_free().
typedef struct MaceArenaHandle {
    uint8_t _private[0];
} MaceArenaHandle;

// Opaque handle to an AlertChannel.
typedef struct MaceAlertChannelHandle {
    uint8_t _private[0];
} MaceAlertChannelHandle;


#ifdef __cplusplus
extern "C" {
#endif

MaceArenaHandle *mace_arena_new(size_t capacity);
void mace_arena_free(MaceArenaHandle *handle);
int32_t mace_arena_push(MaceArenaHandle *handle, const RawMemoryEvent *event);
int32_t mace_arena_pop(MaceArenaHandle *handle, RawMemoryEvent *out_event);
int32_t mace_arena_try_push(MaceArenaHandle *handle, const RawMemoryEvent *event);
int32_t mace_arena_try_pop(MaceArenaHandle *handle, RawMemoryEvent *out_event);
size_t mace_arena_len(const MaceArenaHandle *handle);
size_t mace_arena_capacity(const MaceArenaHandle *handle);

MaceAlertChannelHandle *mace_alert_channel_new(size_t capacity);
void mace_alert_channel_free(MaceAlertChannelHandle *handle);
int32_t mace_alert_channel_try_recv(MaceAlertChannelHandle *handle, uint8_t *out_buffer, size_t buffer_size);
int32_t mace_alert_channel_recv(MaceAlertChannelHandle *handle, uint8_t *out_buffer, size_t buffer_size);
/* Test harness: inject maximal protobuf alert (see Rust mace_alert_channel_feed_test_alert). */
int32_t mace_alert_channel_feed_test_alert(MaceAlertChannelHandle *handle);

typedef struct JitStormStats {
  uint64_t requested;
  uint64_t pushed;
  uint64_t popped;
  uint64_t full_retries;
} JitStormStats;

int32_t mace_simulate_jit_storm(MaceArenaHandle *handle, uint32_t count, JitStormStats *out_stats);

typedef void (*MaceJsonCallback)(const char *json_utf8);
void mace_register_event_callback(MaceJsonCallback cb);
void mace_unregister_event_callback(void);

int32_t mace_engine_init(void);
int32_t mace_load_rules(const char *yaml_utf8);
int32_t mace_load_rules_file(const char *path_utf8);
int32_t mace_start_pipeline(void);
int32_t mace_stop_pipeline(void);

/* Mace core stderr filter: 0=TRACE,1=INFO,2=SUPPRESSED,3=EVENT,4=ALERT. Returns 0 on success. */
int32_t mace_set_log_level(int32_t level);

#ifdef __cplusplus
} // extern "C"
#endif
#endif  /* MACE_EBPF_H */